# letna.space

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: docker.yml
static/: fonts.css  main.css
templates/: base.html  index.html
